grammar.js
    cds: $ => repeat(
      choice(
        $.using,
        $.namespace,
        $._definition,
      ),
    ),

    namespace: $ => seq(
      kw('namespace'),
      field('path', $.simple_path),
      $._required_semicolon,
    ),

    _definition: $ => seq(
      repeat($.annotation),
      choice(
        seq(
          optional_kw('define'),
          choice(
            $.context_definition,
            $.service_definition,
            $.entity_definition,
            $.event_definition,
            $.aspect_definition,
            $.type_definition,
            $.annotation_definition,
            $.view_definition,
            $._action_or_function_definition,
          ),
        ),
        seq(
          kw('extend'),
          choice(
            $.extend_context,
            $.extend_service,
            $.extend_structure,
            $.extend_projection,
            $.extend_artifact,
          ),
        ),
        $.annotate_artifact,
      ),
    ),

    simple_path: $ => list_of($.identifier, '.'),

    identifier: $ => choice(
      $._unquoted_identifier,
      $._delimited_identifier,
    ),

    _unquoted_identifier: $ => /[\p{ID_Start}$_][\p{ID_Continue}$\u200C\u200D]*/u,
    _delimited_identifier: $ => token(choice(
      // new style
      /!\[[^\]\n\r\u2028\u2029]*](][^\]\n\r\u2028\u2029]*])*/,
      // old-style
      /("[^"\n\r\u2028\u2029]*")+/,
    )),

    _required_semicolon: $ => choice(';', $._automatic_semicolon),
  },
});

/**
 * Custom error for invalid arguments to our rule-functions.
 */
class InvalidArgument extends Error {}

/**
 * Convenience function for a _definition name_, that is, a node that _introduces_
 * a new name and not a reference.
 *
 * @param {object} $
 * @return {FieldRule}
 */
function def_path_name($) {
  if (arguments.length !== 1)
    throw new InvalidArgument('incorrect number of arguments');
  return field('name', alias($.simple_path, $.name));
}

/**
 * Convenience function for a reference that is either a definition (`E`)
 * or an element (`E:elem`).
 *
 * @param {object} $
 * @return {SeqRule}
 */
function ref_definition_with_optional_element($) {
  if (arguments.length !== 1)
    throw new InvalidArgument('incorrect number of arguments');
  return seq(
    alias($.simple_path, $.definition_reference),
    optional(seq(':', alias($.simple_path, $.element_reference))),
  );
}

/**
 * Convenience function for a reference that is a definition (`E`).
 *
 * @param {object} $
 * @return {AliasRule}
 */
function ref_definition($) {
  if (arguments.length !== 1)
    throw new InvalidArgument('incorrect number of arguments');
  return alias($.simple_path, $.definition_reference);
}

/**
 * A list of `rule`. At least one rule must be parsed.
 *
 * @param {Rule} rule
 * @param {string} separator
 * @return {SeqRule}
 */
function list_of(rule, separator = ',') {
  if (arguments.length > 2)
    throw new InvalidArgument('too many arguments');
  return seq(
    rule,
    repeat(seq(separator, rule)),
  );
}

/**
 * A list of `rule` with an optional trailing `separator`.
 * At least one rule must be parsed.
 *
 * @param {Rule} rule
 * @param {string} separator
 * @return {SeqRule}
 */
function list_of_trailing(rule, separator = ',') {
  if (arguments.length > 2)
    throw new InvalidArgument('too many arguments');
  return seq(
    rule,
    repeat(seq(separator, rule)),
    optional(separator),
  );
}

/**
 * Same as `list_of_trailing()`, but makes the rule optional.
 *
 * @param {Rule} rule
 * @param {string} separator
 * @return {ChoiceRule}
 */
function optional_list_of_trailing(rule, separator = ',') {
  return optional(list_of_trailing(rule, separator));
}

/**
 * A CDS keyword.  The string (keyword) can be parsed case-insensitive.
 *
 * @param {string} str
 * @return {AliasRule}
 */
function kw(str) {
  if (typeof str !== 'string') throw new InvalidArgument('keyword is not a string');
  if (arguments.length !== 1) throw new InvalidArgument('expected exactly one argument');
  // Note: alias() is required for highlights.scm
  return alias(new RegExp(
    str
      .split('')
      .map((c) => `[${c.toLowerCase()}${c.toUpperCase()}]`)
      .join(''),
  ), str);
}

/**
 * Same as `kw()`, but optional.
 *
 * @param {string} str
 * @return {ChoiceRule}
 */
function optional_kw(str) {
  return optional(kw(str));
}
