test/corpus/namespace.txt
================================================================================
Namespaces: Single Identifier
================================================================================

namespace ![my prefix];

--------------------------------------------------------------------------------

(cds
  (namespace
    (simple_path
      (identifier))))

================================================================================
Namespaces: Path
================================================================================

namespace ns.tree.sitter.cds;

--------------------------------------------------------------------------------

(cds
  (namespace
    (simple_path
      (identifier)
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Namespaces: Path Mixed
================================================================================

namespace ns.![tree.sitter].cds;

--------------------------------------------------------------------------------

(cds
  (namespace
    (simple_path
      (identifier)
      (identifier)
      (identifier))))
